# Automatic-License-Plate-Detector

./: .env.example  .gitignore  detector.py  main.py  ocr_engine.py  pyproject.toml  requirements.txt  ruff.toml
about/: README.epoch1.md  README.epoch2.md  README.epoch3.md
app/: bot.py  detector.py  image_processor.py  ocr_engine.py  preprocessor.py  utils.py  video_processor.py
bot/: main.py
detector_model/: train.py
